--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </p>
                 </div>
                 <div class="w-full md:w-1/2">
-                    <img src="https://placehold.co/600x400/1f2937/ffffff?text=Panel+de+Login" alt="Imagen del panel de inicio de sesión" class="rounded-lg app-panel w-full">
+                    <img src="Images/1.png" alt="Imagen del panel de inicio de sesión" class="rounded-lg app-panel w-full">
                 </div>
             </div>
 
@@ -75,7 +75,7 @@
                     </p>
                 </div>
                 <div class="w-full md:w-1/2">
-                     <img src="https://placehold.co/600x400/e0e0e0/333333?text=Botón+de+Ajustes" alt="Botón para ir al panel de eliminación de cuenta" class="rounded-lg app-panel w-full">
+                     <img src="images/2.png" alt="Botón para ir al panel de eliminación de cuenta" class="rounded-lg app-panel w-full">
                 </div>
             </div>
 
@@ -91,7 +91,7 @@
                     </p>
                 </div>
                 <div class="w-full md:w-1/2">
-                    <img src="https://placehold.co/600x400/fee2e2/b91c1c?text=Panel+de+Eliminación" alt="Panel final para eliminar la cuenta" class="rounded-lg app-panel w-full">
+                    <img src="Images/3.png" alt="Panel final para eliminar la cuenta" class="rounded-lg app-panel w-full">
                 </div>
             </div>
             
