--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </p>
                 </div>
                 <div class="w-full md:w-1/2">
-                     <img src="images/2.png" alt="Botón para ir al panel de eliminación de cuenta" class="rounded-lg app-panel w-full">
+                     <img src="Images/2.png" alt="Botón para ir al panel de eliminación de cuenta" class="rounded-lg app-panel w-full">
                 </div>
             </div>
 
